# credit-card-fraud-mlops

./: .dvcignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
.claude/agents/: data-engineer.md  deployer.md  evaluator.md  feature-engineer.md  mlops-orchestrator.md  model-trainer.md
.github/workflows/: ci.yml
kaggle/: kernel-metadata.json  train_kernel.py
scripts/: run_all.sh
src/fraud_scoring/: __init__.py  config.py
src/fraud_scoring/evaluate/: evaluate.py
src/fraud_scoring/features/: build_features.py
src/fraud_scoring/monitoring/: drift.py
src/fraud_scoring/pipeline/: run_kaggle_gpu.py
src/fraud_scoring/serving/: api.py
src/fraud_scoring/serving/agents/: explanation_agent.py  orchestrator.py  review_agent.py  scoring_agent.py
tests/: conftest.py  test_agents.py  test_api.py  test_features.py
