[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-scoring"
version = "0.1.0"
description = "End-to-end MLOps platform for credit-card fraud scoring: Kaggle-GPU trained, MLflow-tracked, multi-agent served."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "gulhanimsc" }]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"fraud_scoring" = ["../../params.yaml"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
